--- a/estrutura/pre-textuais/resumo.tex
+++ b/estrutura/pre-textuais/resumo.tex
@@ -4,12 +4,12 @@
 \begin{SingleSpacing}
 
 % Não altere esta seção do texto--------------------------------------------------------
-\imprimirautorcitacao. \imprimirtitulo. \imprimirdata. \pageref {LastPage} f. \imprimirprojeto\ – \imprimirprograma, \imprimirinstituicao. \imprimirlocal, \imprimirdata.\\
+%\imprimirautorcitacao. \imprimirtitulo. \imprimirdata. \pageref {LastPage} f. \imprimirprojeto\ – \imprimirprograma, \imprimirinstituicao. \imprimirlocal, \imprimirdata.\\
 %---------------------------------------------------------------------------------------
 
 % Focar no que foi desenvolvido ....
 
-Nesse relatório de estágio, requisito para conclusão do Curso Superior de Tecnologia em Sistemas para Internet, são apresentadas atividades referentes ao planejamento, desenvolvimento e execução do projeto \imprimirtitulo. Minha atuação se estendeu por todo o fluxo do modelo de desenvolvimento. Participei na análise do problema ajudando a elicitar histórias de usuários e medir o tamanho das tarefas com a equipe. Implementei classes em Java da camada de modelo com seus respectivos mapeamentos com as tabelas no banco utilizando JPA com Hibernate e o Spring, bem como criei e executei os scripts no banco de dados. Implementei classes da camada de controle com suas respectivas regras de negócio e classes da camada de acesso ao banco, realizando operações como um CRUD básico e consultas utilizando JPQL. Na camada de visão utilizamos o JSF com Primefaces para construção do HTML dinâmico juntamente com CSS3 como folhas de estilo e Javascript para execução de lógicas no browser do lado do cliente. Esse projeto colaborou profundamente para a fixação dos conhecimentos adquiridos no decorrer do curso, principalmente nas tecnologias:Java, JSF, SQL e SVN. O principal objetivo do estágio foi utilizar, na prática, os conhecimentos obtidos ao longo do curso, bem como aprender conceitos e tecnologias extras, adquirir experiência com a rotina de trabalho e principalmente aprender a codificar em equipe utilizando versionamento de código, seguindo todas as etapas previstas no PDS denominado MODUS. \\
+Nesse relatório de estágio, requisito para conclusão do Curso Superior de Tecnologia em Sistemas para Internet, são apresentadas atividades referentes ao planejamento, desenvolvimento e execução do projeto \imprimirtitulo. Minha atuação se estendeu por todo o fluxo do modelo de desenvolvimento, participando da análise do problema, ajudando a elicitar histórias de usuários e medir o tamanho das tarefas com a equipe. Implementando classes em Java da camada de modelo com seus respectivos mapeamentos com as tabelas no banco utilizando JPA com Hibernate e o Spring, bem como criando e executando os \textit{scripts} no banco de dados. Implementando classes da camada de controle com suas respectivas regras de negócio e classes da camada de acesso ao banco, realizando operações como um CRUD básico e consultas utilizando JPQL. Na camada de visão utilizamos o JSF com Primefaces para construção do HTML dinâmico juntamente com CSS3 como folhas de estilo e Javascript para execução de lógicas no \textit{browser} do lado do cliente. Esse projeto colaborou profundamente para a fixação dos conhecimentos adquiridos no decorrer do curso, principalmente nas tecnologias: Java, JSF, SQL e SVN. O principal objetivo do estágio foi utilizar, na prática, os conhecimentos obtidos ao longo do curso, bem como aprender conceitos e tecnologias extras, adquirir experiência com a rotina de trabalho e principalmente aprender a codificar em equipe utilizando versionamento de código, seguindo todas as etapas previstas no PDS denominado MODUS. \\
 
 \textbf{Palavras-chave}: Java. JSF. SQL. Gestão. Desenvolvimento. Equipe.
 
