--- a/estrutura/textuais/introducao.tex
+++ b/estrutura/textuais/introducao.tex
@@ -5,7 +5,7 @@
 
 Este relatório descreve as atividades realizadas, no que diz respeito ao planejamento, desenvolvimento e execução de um dos projetos desenvolvidos pela SEDES, denominado de Veículos – Sistema de gestão de frotas do TRE-PB. O mesmo foi executado no exercício do estágio supervisionado no Tribunal Regional Eleitoral da Paraíba, localizado no Centro em João Pessoa.
 
-O projeto teve inicio em abril de 2017 e a versão 1.0 foi entregue na metade de maio de 2017 e continha cadastros inciais como colaboradores e veículos. A versão 1.0.1 se estendeu até julho de 2017 e continha as principais funcionalidades da aplicação que de fato iriam realizar o controle das viagens. O projeto tinha previsão para ser concluído em dois meses, porém uma mudança substancial do modelo teve que ser efetuada durante a fase de desenvolvimento gerando a versão 1.1, como pode ser visto na ata de reunião descrita na \autoref{fig:figura-ata1}. Dessa forma o projeto precisou ser replanejado e se estendeu para o total de cinco meses. Ele foi supervisionado pelo chefe da SEDES, Francisco Gomes, bem como acompanhado pelo supervisor técnico, que é o desenvolvedor responsável pelo projeto que também precisou ser substituído, todos efetivos no quadro do Tribunal. A equipe no projeto ficou composta por 1 gerente e 3 desenvolvedores, sendo 1 supervisor técnico e 2 estagiários, 1 Product Owner e 1 DBA responsável pelo gerenciamento do banco de dados, este lotado na SISBAN.
+O projeto teve início em abril de 2017 e a versão 1.0 foi entregue na metade de maio de 2017 e continha cadastros iniciais como colaboradores e veículos. A versão 1.0.1 se estendeu até julho de 2017 e continha as principais funcionalidades da aplicação que de fato iriam realizar o controle das viagens. O projeto tinha previsão para ser concluído em dois meses, porém uma mudança substancial do modelo teve que ser efetuada durante a fase de desenvolvimento gerando a versão 1.1, como pode ser visto na ata de reunião descrita na \autoref{fig:figura-ata1}. Dessa forma o projeto precisou ser replanejado e se estendeu para o total de cinco meses. Ele foi supervisionado pelo chefe da SEDES, Francisco Gomes, bem como acompanhado pelo supervisor técnico, que é o desenvolvedor responsável pelo projeto que também precisou ser substituído, todos efetivos no quadro do Tribunal. A equipe no projeto ficou composta por 1 gerente e 3 desenvolvedores, sendo 1 supervisor técnico e 2 estagiários, 1 Product Owner e 1 DBA responsável pelo gerenciamento do banco de dados, este lotado na SISBAN.
 
 Nesse relatório serão explanados, tanto os conhecimentos teóricos, quanto os práticos, descrevendo todas as etapas do projeto. Também estarão presentes neste relatório informações referentes à empresa e sobre a unidade da empresa onde o projeto foi executado, além de informações sobre infra-estrutura.
 Por fim, serão mencionadas as correlações entre o conteúdo visto em sala de aula e o que foi feito na prática, bem como as principais dificuldades encontradas durante a execução do projeto.
@@ -20,7 +20,7 @@ Auxiliar no desenvolvimento dos ativos, soluções web desenvolvidas pela SEDES,
 
 \subsection{Objetivos específicos}
 \label{sec:objetivosEspecificos}
-Contribuir na implementação do Sistema de Gestão de Frotas, quando possível oferecendo alternativas para a implementação mediante aos conhecimentos adquiridos na graduação. Ganhar experiência com o fluxo de trabalho da uma equipe de desenvolvimento incorporando conceitos de metodologias ágeis e versionamento de código, sendo capaz de resolver conflitos de códigos, quando houver, e evita-los. Trabalhar com reuniões diárias, planejar soluções com a modelagem do negócio especificando suas respectivas histórias de usuários, codificar utilizando as tecnologias e padrões adotados pela equipe, realizar entregas frequentes sempre buscando feedback das releases pelo cliente e gerar documentação explicando as funcionalidades e como utiliza-las. 
+Contribuir na implementação do Sistema de Gestão de Frotas, quando possível oferecendo alternativas para a implementação mediante os conhecimentos adquiridos na graduação. Ganhar experiência com o fluxo de trabalho da uma equipe de desenvolvimento incorporando conceitos de metodologias ágeis e versionamento de código, sendo capaz de resolver conflitos de códigos, quando houver, e evitá-los. Trabalhar com reuniões diárias, planejar soluções com a modelagem do negócio especificando suas respectivas histórias de usuários, codificar utilizando as tecnologias e padrões adotados pela equipe, realizar entregas frequentes sempre buscando \textit{feedback} das \textit{releases} pelo cliente e gerar documentação explicando as funcionalidades e como utilizá-las. 
 
 % utilizar met. ágeis, trabalhar em equipe, participar de reuniões, documentar, especificar, implementar...
 
@@ -62,4 +62,5 @@ Além desse capítulo, o relatório está dividido em outros três capítulos br
 
 \autoref{chap:atividadesRealizadas} - Atividades Realizadas: apresenta o projeto, no qual as atividades do estagiário foram realizadas, descrevendo os principais conceitos e funcionalidades. Relata as atividades realizadas ao longo do período de estágio descrevendo o fluxo e o processo de desenvolvimento e detalha a implementação de algumas funcionalidades.
 
+% TODO: revisar texto, pois as considerações finais terá outra abordagem
 \autoref{chap:consideracoesFinais} – Considerações Finais: Apresenta um relato sobre as experiências adquiridas, metas e objetivos alcançados. O quão grande foi a contribuição do estágio na minha formação profissional.
