--- a/estrutura/textuais/introducao.tex
+++ b/estrutura/textuais/introducao.tex
@@ -5,7 +5,7 @@
 
 Este relatório descreve as atividades realizadas, no que diz respeito ao planejamento, desenvolvimento e execução de um dos projetos desenvolvidos pela SEDES, denominado de Veículos – Sistema de gestão de frotas do TRE-PB. O mesmo foi executado no exercício do estágio supervisionado no Tribunal Regional Eleitoral da Paraíba, localizado no Centro em João Pessoa.
 
-O projeto teve início em abril de 2017 e a versão 1.0 foi entregue na metade de maio de 2017 e continha cadastros iniciais como colaboradores e veículos. A versão 1.0.1 se estendeu até julho de 2017 e continha as principais funcionalidades da aplicação que de fato iriam realizar o controle das viagens. O projeto tinha previsão para ser concluído em dois meses, porém uma mudança substancial do modelo teve que ser efetuada durante a fase de desenvolvimento gerando a versão 1.1, como pode ser visto na ata de reunião descrita na \autoref{fig:figura-ata1}. Dessa forma o projeto precisou ser replanejado e se estendeu para o total de cinco meses. Ele foi supervisionado pelo chefe da SEDES, Francisco Gomes, bem como acompanhado pelo supervisor técnico, que é o desenvolvedor responsável pelo projeto que também precisou ser substituído, todos efetivos no quadro do Tribunal. A equipe no projeto ficou composta por 1 gerente e 3 desenvolvedores, sendo 1 supervisor técnico e 2 estagiários, 1 Product Owner e 1 DBA responsável pelo gerenciamento do banco de dados, este lotado na SISBAN.
+O projeto teve início em abril de 2017 e a versão 1.0 foi entregue na metade de maio de 2017 e continha cadastros iniciais como colaboradores e veículos. A versão 1.0.1 se estendeu até julho de 2017 e continha as principais funcionalidades da aplicação que de fato iriam realizar o controle das viagens. O projeto tinha previsão para ser concluído em dois meses, porém uma mudança substancial do modelo teve que ser efetuada durante a fase de desenvolvimento gerando a versão 1.1, como pode ser visto na ata de reunião descrita na \autoref{fig:figura-ata1}. Dessa forma o projeto precisou ser replanejado e se estendeu, totalizando cinco meses. Ele foi supervisionado pelo chefe da SEDES, Francisco Gomes, bem como acompanhado pelo supervisor técnico, que é o desenvolvedor responsável pelo projeto que também precisou ser substituído, todos efetivos no quadro do Tribunal. A equipe no projeto ficou composta por 1 gerente e 3 desenvolvedores, sendo 1 supervisor técnico e 2 estagiários, 1 Product Owner e 1 DBA responsável pelo gerenciamento do banco de dados, este lotado na SISBAN.
 
 Nesse relatório serão explanados, tanto os conhecimentos teóricos, quanto os práticos, descrevendo todas as etapas do projeto. Também estarão presentes neste relatório informações referentes à empresa e sobre a unidade da empresa onde o projeto foi executado, além de informações sobre infra-estrutura.
 Por fim, serão mencionadas as correlações entre o conteúdo visto em sala de aula e o que foi feito na prática, bem como as principais dificuldades encontradas durante a execução do projeto.
